--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Hallo, ich bin Phaser!</h1>
-        <script src="./node_modules/phaser/build/phaser.js"></script>
+        <script src="./node_modules/phaser-ce/build/phaser.js"></script>
+        <script src="./index.js"></script>
     </body>
 </html>
