change webpack config to accomodate for different page versions

--- a/dev_markus.html
+++ b/dev_markus.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <h1>Hallo, ich bin Phaser!</h1>
-        <script src="./bundle.main.js"></script>
+        <h1>Hallo, ich bin Markus!</h1>
+        <script src="./bundle.dev_markus.js"></script>
     </body>
 </html>
