--- a/dev_stephan.html
+++ b/dev_stephan.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Hallo, ich bin Stephan!</h1>
-        <script src="./bundle.js"></script>
+        <script src="./bundle.dev_stephan.js"></script>
     </body>
 </html>
