add player sprite, basic tank controls

--- a/dev_markus.html
+++ b/dev_markus.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>GGJ 2018: Starship Scanner</title>
+        <title>[m] GGJ 2018: Starship Scanner</title>
     </head>
 
     <body>
         <h1>Hallo, ich bin Markus!</h1>
+        <p><b>Controls</b> cursor keys: player movement<p>
         <script src="./bundle.dev_markus.js"></script>
     </body>
 </html>
