update controls listing in HTML

--- a/dev_markus.html
+++ b/dev_markus.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Hallo, ich bin Markus!</h1>
-        <p><b>Controls</b> cursor keys: player movement<p>
+        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones<p>
         <script src="./bundle.dev_markus.js"></script>
     </body>
 </html>
