--- a/dev_markus.html
+++ b/dev_markus.html
@@ -6,8 +6,8 @@
     </head>
 
     <body>
-        <h1>Hallo, ich bin Markus!</h1>
-        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones<p>
+        <h1>Hallo, ich bin ein Spiel!</h1>
+        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones; Spacebar: scan<p>
         <script src="./bundle.dev_markus.js"></script>
     </body>
 </html>
