update index.html with game title and controls info

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>GGJ 2018: Starship Scanner</title>
+        <title>GGJ 2018: Find your alien friend</title>
     </head>
 
     <body>
-        <h1>Hallo, ich bin Phaser!</h1>
+        <h1>Find your alien friend</h1>
+        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones; Spacebar: scan<p>
         <script src="./bundle.main.js"></script>
     </body>
 </html>
