--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Find your alien friend</h1>
-        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones; Spacebar: scan<p>
+        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones; Spacebar: scan</p>
+        <p>Press R in game end screens to restart</p>
         <script src="./bundle.main.js"></script>
     </body>
 </html>
