--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
     <head>
         <meta charset="utf-8">
         <title>GGJ 2018: Find your alien friend</title>
+
+        <style>
+            body {
+                background: #282827;
+                color: white;
+                font-family: 'Open Sans', sans-serif;
+            }
+
+            body h1 {
+                text-align: center;
+            }
+
+            body p {
+                max-width: 1280px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            #game-container {
+                width: 1280px;
+                margin-left: auto;
+                margin-right: auto;
+            }
+        </style>
     </head>
 
     <body>
         <h1>Find your alien friend</h1>
-        <p><b>Controls</b> cursor keys: player movement; F/R: cycle through scanning cones; Spacebar: scan</p>
-        <p>Press R in game end screens to restart</p>
+        <div id="game-container"></div>
         <script src="./bundle.main.js"></script>
     </body>
 </html>
