--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
 
     <body>
         <h1>Find your alien friend</h1>
+        <p>
+        Find your lost friend in space. Transmit scanning signals to sense your environment and reveal your friend again.
+        But beware: There are also hostile creatures around which will attack you when they receive your signal.
+        Don't get caught in the blast when they fire!
+        </p>
+        <p>Use <strong>cursor keys</strong> to move around, <strong>spacebar</strong> to scan for your friend and enemies, <strong>F/R</strong> to change the width and range of your scanning cone</p>
+        <p>Pressing <strong>R</strong> in end screens will restart the game</p>
         <div id="game-container"></div>
         <script src="./bundle.main.js"></script>
     </body>
